# migasfree-connect

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  build.sh  pyproject.toml  role_audit_report.md
.agent/skills/: bash-expert.md  cicd-expert.md  websocket-expert.md
.github/workflows/: build.yml
connect/: migasfree-connect
docs/adr/: 0001-record-architecture-decisions.md  0002-modular-package-refactor.md  0003-factory-pattern-launcher.md  0004-native-cryptography-extraction.md
docs/governance/audits/: strategic_audit_report.md
migasfree_connect/: auth.py  cli.py  launcher.py  manager.py  tunnel.py
migasfree_connect/utils/: crypto.py
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/rpm/SPECS/: migasfree-connect.spec
packaging/windows/: install.bat  uninstall.bat
tests/: test_auth_credentials.py  test_cli.py  test_crypto.py  test_launcher.py  test_manager.py  test_tunnel.py
